feat(connector): [Zen] add google pay redirect flow support  (#1454)
