# openapi/openapi_spec.json
@@ -3982,6 +3982,9 @@
           }
         }
       },
+      "GooglePayRedirectData": {
+        "type": "object"
+      },
       "GooglePayWalletData": {
         "type": "object",
         "required": [
@@ -7840,6 +7843,17 @@
             "properties": {
               "google_pay": {
                 "$ref": "#/components/schemas/GooglePayWalletData"
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "google_pay_redirect"
+            ],
+            "properties": {
+              "apple_pay_redirect": {
+                "$ref": "#/components/schemas/GooglePayRedirectData"
               }
             }
           },
